# scancode-toolkit

./: .VERSION  .bumpversion.cfg  .cirrus.yml  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  INSTALL.rst  ISSUE_TEMPLATE.md  LICENSE  LICENSE.txt  LastGoodNomosTestfilesScan  MANIFEST.in  Makefile  NEW GPL NEGATIVE RULES  NOTICE  README  README.md  README.rst  README_pt-br.rst  ROADMAP-ABOUTCODE.rst  ROADMAP.rst  RunLicScan  app.py  appveyor.yml  azure-pipelines.yml  clear  codecov.yml  configure  configure.bat  conftest.py  (+54 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  config.yml
2019_3_hamzam1997__issue#1381_Check_if_all_these_licenses_are_detected/: LICENSES.json  LICENSES.txt  open_icon_library-standard_LICENSES.json  open_icon_library-standard_LICENSES.txt
debian/: README.Debian  README.source  changelog  control  copyright  postinst  rules
dephell_setuptools/: __init__.py  __main__.py  _base.py  _cached_property.py  _cfg.py  _cli.py  _cmd.py  _constants.py  _manager.py  _pkginfo.py  _static.py  distutils_cmd.py  setup.py
docs/: 389-exception.html  389-exception.json  389-exception.yml  3com-microcode.html  3com-microcode.json  3dslicer-1.0.html  3dslicer-1.0.json  3dslicer-1.0.yml  4suite-1.1.html  4suite-1.1.json  4suite-1.1.yml  996-icu-1.0.html  996-icu-1.0.json  996-icu-1.0.yml  CNAME  Makefile  abrms.html  abrms.json  abrms.yml  abstyles.LICENSE  abstyles.html  abstyles.json  ac3filter.html  ac3filter.json  ac3filter.yml  accellera-systemc.html  accellera-systemc.json  accellera-systemc.yml  acdl-1.0.html  acdl-1.0.json  acdl-1.0.yml  ace-tao.html  ace-tao.json  ace-tao.yml  acroname-bdk.html  acroname-bdk.json  acroname-bdk.yml  activestate-community-2012.html  activestate-community-2012.json  activestate-community-2012.yml  (+6267 more)
etc/: configure.py
etc/scripts/licenses/license-csv/: README.rst  scancode_debug_license_csv.py  setup.cfg
glc/: 0BSD.t1  AFL-1.2.t1.yml  AFL-2.0.t1.yml  AFL-3.0.t1.yml  AFL-3.0.t2  AFL-3.0.t5  AGPL-1.0.t1  AGPL-1.0.t1.yml  AGPL-3.0-Header.t1  AGPL-3.0-Header.t2  AGPL-3.0-Header.t3  AGPL-3.0-Header.t4  AGPL-3.0-Only.t1  AGPL-3.0-Short.t1.yml  AGPL-3.0.t1  AGPL-3.0.t2  AGPL-3.0.t2.yml  AGPL-3.0.t3  AMDPLPA.t1  ANTLR-PD.t1  ANTLR-PD.t1.yml  APL-1.0.t1.yml  APSL-1.1.t1  APSL-1.1.t1.yml  APSL-1.2.t1  Abstyles.t1  Adobe-Glyph.t1.yml  Anti996.t1  Anti996.t2  Anti996.t3  Anti996.t3.yml  Apache-1.0.t1  Apache-1.1.t1  (+584 more)
tests/cluecode/data/ics/dbus/: COPYING  COPYING.yml  acinclude.m4  acinclude.m4.yml  configure.in  configure.in.yml
tests/licensedcode/data/slic-tests/identification/: DOMImplementationLS.java.yml  Gentium-license.txt.yml  LICENSE.txt.yml  NOTICE.yml  NormalizationCorrections.yml  README.yml  Segment.h.yml  Segment.yml  SourceMap.jsm.yml  _iomanip.yml  _rand48.c.yml  aclocal.m4.yml  activity-home.css.yml  activity-home.yml  aec_rdft.yml  android.graphics.drawable.Drawable.yml  atm.yml  ax_enable_builddir.yml  basepic.yml  cairo-d2d-surface.cpp.yml  cairo-d2d-surface.yml  cf2blues.c.yml  cf2blues.yml  codepage.yml  config.yml  configure.in  core.yml  decNumber.yml  defBF539.yml  dwarf_helper.h  dwarf_helper.yml  gbsearcharray.h.yml  gbsearcharray.yml  glext.yml  glx.yml  hdsmart.h.yml  hp_sdc.yml  if_ppp.h  index.xml.yml  index.yml  (+51 more)
tests/licensedcode/data/slic-tests/identification/3/: NOTICE.yml
tests/licensedcode/data/slic-tests/identification/4/: LICENSE.yml
tests/licensedcode/data/slic-tests/identification/5/: NOTICE.yml
tests/licensedcode/data/slic-tests/identification/6/: NOTICE.txt.yml
tests/packagedcode/data/cargo/cargo-with-workspace/boring/: Cargo.toml  README.md
tests/packagedcode/data/cargo/cargo-with-workspace/boring/boring/: Cargo.toml
tests/packagedcode/data/cargo/cargo-with-workspace/boring/hyper-boring/: Cargo.toml
tests/packagedcode/data/cargo/cargo-with-workspace/boring/tokio-boring/: Cargo.toml
tests/packagedcode/data/cargo/cargo-with-workspace/tauri/: Cargo.toml
tests/packagedcode/data/cargo/cargo-with-workspace/tauri/core/tauri/: Cargo.toml
tests/packagedcode/data/cargo/cargo-with-workspace/tauri/core/tauri-build/: Cargo.toml
tests/packagedcode/data/cargo/cargo-with-workspace/tauri/core/tauri-runtime/: Cargo.toml
tests/packagedcode/data/cargo/cargo-with-workspace/tauri/examples/api/src-tauri/: Cargo.toml
tests/packagedcode/data/cargo/cargo_toml/boring-child/: Cargo.toml  Cargo.toml.expected
tests/packagedcode/data/cargo/scan/dac/: Cargo.toml
tests/packagedcode/data/opam/sample2/: output.opam.expected  sample2.opam
tests/packagedcode/data/opam/sample3/: output.opam.expected  sample3.opam
tests/packagedcode/data/opam/sample6/: output.opam.expected  sample6.opam
tests/packagedcode/data/opam/sample7/: output.opam.expected  sample7.opam
tests/packagedcode/data/pypi/poetry/univers/: pyproject.toml
tests/packagedcode/data/pypi/pyproject-toml/standard/apache-airflow/: pyproject.toml
tests/packagedcode/data/pypi/pyproject-toml/standard/attrs/: pyproject.toml
tests/packagedcode/data/pypi/pyproject-toml/standard/flask/: LICENSE.txt  pyproject.toml
tests/packagedcode/data/pypi/pyproject-toml/standard/lc0/: COPYING  pyproject.toml
tests/packagedcode/data/pypi/setup.cfg/wheel-0.34.2/: setup.cfg  setup.cfg-expected-args.json  setup.cfg-expected.json  setup.py
tests/packagedcode/data/pypi/source-package/pip-22.0.4/: pyproject.toml  setup.cfg
tests/packagedcode/data/pypi/source-package/pip-22.0.4/src/pip.egg-info/: PKG-INFO  SOURCES.txt
tests/packagedcode/data/pypi/unpacked_sdist/metadata-2.1/commoncode-21.5.12/: MANIFEST.in  PKG-INFO  pyproject.toml  requirements.txt  setup.cfg
tests/packagedcode/data/pypi/unpacked_sdist/metadata-2.1/commoncode-21.5.12/src/commoncode.egg-info/: SOURCES.txt  requires.txt
tests/packagedcode/data/recon/: base.opam  composer.json  github.gemspec  haxelib.json  ocaml-variants.opam  opam
tests/packagedcode/data/recon/pypi/Six/: metadata.json
(+107457 files in other folders)
