[tool.briefcase]
project_name = "scancode"
bundle = "com.nexb.scancode"
version = "0.0.1"
url = "https://github.com/nexB/scancode-toolkit"
license = "Apache Software License"
author = 'nexB. Inc. and others'
author_email = "info@aboutcode.org"

[tool.briefcase.app.scancode-toolkit]
formal_name = "scancode-toolkit"
description = "ScanCode is a tool to scan code for license, copyright, package and their documented dependencies and other interesting facts."
icon = "src/scancode/resources/scancode-toolkit"
sources = [
    'src/scancode_config.py',
    'src/cluecode',
    'src/formattedcode',
    'src/licensedcode',
    'src/packagedcode',
    'src/scancode',
    'src/scancode_toolkit',
    'src/summarycode',
    'src/textcode',
]
requires = [
    "attrs >= 18.1,!=20.1.0;python_version<'3.11'",
    "attrs >= 22.1.0;python_version>='3.11'",
    "Beautifulsoup4 >= 4.0.0",
    "boolean.py >= 4.0",
    "chardet >= 3.0.0",
    "click >= 6.7, !=7.0",
    "colorama >= 0.3.9",
    "commoncode >= 31.0.0",
    "container-inspector >= 31.0.0",
    "debian-inspector >= 31.0.0",
    "dparse2 >= 0.7.0",
    "fasteners",
    "fingerprints >= 0.6.0",
    "ftfy >=  6.0.0",
    "gemfileparser2 >= 0.9.0",
    "html5lib",
    "importlib_metadata",
    "intbitset >= 3.0.2",
    "jaraco.functools",
    "javaproperties >= 0.5",
    "jinja2 >= 2.7.0",
    "jsonstreams >= 0.5.0",
    "license_expression >= 30.0.0",
    "lxml >= 4.9.2",
    "MarkupSafe >= 1.0",
    "packageurl_python >= 0.9.0",
    "packvers >= 21.0.0",
    "parameter-expansion-patched >= 0.3.1",
    "pdfminer.six >= 20200101",
    "pefile >= 2020.1.1",
    "pkginfo2 >= 30.0.0",
    "pip-requirements-parser >= 32.0.1",
    "pluggy >= 1.0.0",
    "plugincode >= 31.0.0",
    "publicsuffix2",
    "pyahocorasick >= 2.0.0",
    "pygmars >= 0.7.0",
    "pygments",
    "pymaven_patch >= 0.2.8",
    "requests >= 2.7.0",
    "saneyaml >= 0.6.0",
    "spdx_tools == 0.7.0rc0",
    "text_unidecode >= 1.0",
    "toml >= 0.10.0",
    "urlpy",
    "xmltodict >= 0.11.0",
    "zipp >= 3.0.0; python_version < \"3.9\"",
    "typecode >= 30.0.0",
    "typecode[full] >= 30.0.0",
    "extractcode[full] >= 31.0.0",
]
entry_points = [

]


[tool.briefcase.app.scancode-toolkit.macOS]
requires = [
    'std-nslog~=1.0.0'
]

[tool.briefcase.app.scancode-toolkit.linux]
requires = []

[tool.briefcase.app.scancode-toolkit.linux.appimage]
system_requires = [
    "bzip2",
    "xz-utils",
    "zlib1g",
    "libxml2-dev",
    "libxslt1-dev",
    "libpopt0",
]
linuxdeploy_plugins = []

[tool.briefcase.app.scancode-toolkit.linux.flatpak]

[tool.briefcase.app.scancode-toolkit.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.scancode-toolkit.iOS]
supported = false

[tool.briefcase.app.scancode-toolkit.android]
supported = false

[tool.briefcase.app.scancode-toolkit.web]
supported = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# this is used populated when creating a git archive
# and when there is .git dir and/or there is no git installed
fallback_version = "9999.$Format:%h-%cs$"

[tool.pytest.ini_options]
norecursedirs = [
   ".git",
   "bin",
   "dist",
   "build",
   "_build",
   "dist",
   "etc",
   "local",
   "ci",
   "docs",
   "man",
   "share",
   "samples",
   ".cache",
   ".settings",
   "Include",
   "include",
   "Lib",
   "lib",
   "lib64",
   "Lib64",
   "Scripts",
   "thirdparty",
   "tmp",
   "venv",
   "tests/data",
   ".eggs",
   "src/*/data",
   "tests/*/data",
   "src/licensedcode/_vendor"
]

python_files = "*.py"

python_classes = "Test"
python_functions = "test"

addopts = [
    "-rfExXw",
    "--strict-markers",
    "--doctest-modules"
]
