[metadata]
name = scancode-toolkit
version = 32.0.8
license = Apache-2.0 AND CC-BY-4.0 AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = ScanCode is a tool to scan code for license, copyright, package and their documented dependencies and other interesting facts.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/scancode-toolkit

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities

keywords =
    open source
    scan
    license
    package
    dependency
    copyright
    filetype
    author
    extract
    licensing
    scan
    sca
    SBOM
    spdx
    cyclonedx

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst
    cc-by-4.0.LICENSE

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

py_modules =
    scancode_config

python_requires = >=3.7

install_requires =
    attrs >= 18.1,!=20.1.0;python_version<'3.11'
    attrs >= 22.1.0;python_version>='3.11'
    Beautifulsoup4 >= 4.0.0
    boolean.py >= 4.0
    chardet >= 3.0.0
    click >= 6.7, !=7.0
    colorama >= 0.3.9
    commoncode >= 31.0.3
    container-inspector >= 31.0.0
    debian-inspector >= 31.0.0
    dparse2 >= 0.7.0
    fasteners
    fingerprints >= 0.6.0
    ftfy >=  6.0.0
    gemfileparser2 >= 0.9.0
    html5lib
    importlib_metadata
    intbitset >= 3.0.2
    jaraco.functools
    javaproperties >= 0.5
    jinja2 >= 2.7.0
    jsonstreams >= 0.5.0
    license_expression >= 30.1.1
    lxml >= 4.9.2
    MarkupSafe >= 2.1.2
    packageurl_python >= 0.9.0
    packvers >= 21.0.0
    # use temp advanced patched release
    parameter-expansion-patched >= 0.3.1
    pdfminer.six >= 20200101
    pefile >= 2020.1.1
    pkginfo2 >= 30.0.0
    pip-requirements-parser >= 32.0.1
    pluggy >= 1.0.0
    plugincode >= 32.0.0
    publicsuffix2
    pyahocorasick >= 2.0.0
    pygmars >= 0.7.0
    pygments
    pymaven_patch >= 0.2.8
    requests >= 2.7.0
    saneyaml >= 0.6.0
    spdx_tools == 0.8.1
    text_unidecode >= 1.0
    toml >= 0.10.0
    urlpy
    xmltodict >= 0.11.0
    zipp >= 3.0.0; python_version < "3.9"
    typecode >= 30.0.1
    typecode[full] >= 30.0.1
    extractcode[full] >= 31.0.0


[options.packages.find]
where = src


[options.extras_require]
full =
    typecode[full] >= 30.0.0
    extractcode[full] >= 31.0.0

testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    isort
    vendorize >= 0.3.0
    pytest-rerunfailures

docs =
    Sphinx == 5.1.0
    sphinx_rtd_theme >= 0.5.1
    sphinx-reredirects >= 0.1.2
    doc8 >= 0.8.1
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

# linux-only package handling
packages =
    rpm_inspector_rpm >= 4.16.1.3; platform_system == 'Linux'
    regipy >= 3.1.0; platform_system == 'Linux'
    packagedcode_msitools >= 0.101.210706; platform_system == 'Linux'


[options.entry_points]
console_scripts =
    scancode = scancode.cli:scancode
    scancode-reindex-licenses = licensedcode.reindex:reindex_licenses
    scancode-license-data = licensedcode.license_db:dump_scancode_license_data
    regen-package-docs = packagedcode.regen_package_docs:regen_package_docs

# These are configurations for ScanCode plugins as setuptools entry points.
# Each plugin entry hast this form:
#   plugin-name = fully.qualified.module:PluginClass
# where plugin-name must be a unique arbitrary name for this entrypoint.

# scancode_pre_scan is the entry point for pre_scan plugins executed before the
# scans. See also plugincode.pre_scan module for details and doc.
scancode_pre_scan =
    ignore = scancode.plugin_ignore:ProcessIgnore
    facet = summarycode.facet:AddFacet


# scancode_scan is the entry point for scan plugins that run a scan after the
# pre_scan plugins and before the post_scan plugins. See also plugincode.scan
# module for details and doc.
scancode_scan =
    info = scancode.plugin_info:InfoScanner
    licenses = licensedcode.plugin_license:LicenseScanner
    copyrights = cluecode.plugin_copyright:CopyrightScanner
    packages = packagedcode.plugin_package:PackageScanner
    emails = cluecode.plugin_email:EmailScanner
    urls = cluecode.plugin_url:UrlScanner
    generated = summarycode.generated:GeneratedCodeDetector


# scancode_post_scan is the entry point for post_scan plugins executed after the
# scan plugins and before the output plugins. See also plugincode.post_scan
# module for details and doc.
scancode_post_scan =
    summary = summarycode.summarizer:ScanSummary
    tallies = summarycode.tallies:Tallies
    tallies-with-details = summarycode.tallies:TalliesWithDetails
    tallies-key-files = summarycode.tallies:KeyFilesTallies
    tallies-by-facet = summarycode.tallies:FacetTallies
    license-clarity-score = summarycode.score:LicenseClarityScore
    license-policy = licensedcode.plugin_license_policy:LicensePolicy
    mark-source = scancode.plugin_mark_source:MarkSource
    filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
    consolidate = summarycode.plugin_consolidate:Consolidator
    license-references = licensedcode.licenses_reference:LicenseReference
    todo = summarycode.todo:AmbiguousDetectionsToDoPlugin
    classify = summarycode.classify_plugin:FileClassifier


# scancode_output_filter is the entry point for filter plugins executed after
# the post-scan plugins and used by the output plugins to exclude/filter certain
# files or directories from the codebase. See also plugincode.post_scan module
# for details and doc.
scancode_output_filter =
    only-findings = scancode.plugin_only_findings:OnlyFindings
    ignore-copyrights = cluecode.plugin_ignore_copyrights:IgnoreCopyrights


# scancode_output is the entry point for output plugins that write a scan output
# in a given format at the end of a scan. See also plugincode._output module for
# details and doc.
scancode_output =
    html = formattedcode.output_html:HtmlOutput
    html-app = formattedcode.output_html:HtmlAppOutput
    json = formattedcode.output_json:JsonCompactOutput
    json-pp = formattedcode.output_json:JsonPrettyOutput
    spdx-tv = formattedcode.output_spdx:SpdxTvOutput
    spdx-rdf = formattedcode.output_spdx:SpdxRdfOutput
    csv = formattedcode.output_csv:CsvOutput
    jsonlines = formattedcode.output_jsonlines:JsonLinesOutput
    template = formattedcode.output_html:CustomTemplateOutput
    debian = formattedcode.output_debian:DebianCopyrightOutput
    yaml = formattedcode.output_yaml:YamlOutput
    cyclonedx = formattedcode.output_cyclonedx:CycloneDxJsonOutput
    cyclonedx-xml = formattedcode.output_cyclonedx:CycloneDxXmlOutput
