[metadata]
name = scancode-debug-license-csv
version = 0.0.1
license = Apache-2.0
description = A plugin for license detection debug output as CSV

[options]
py_modules =
    scancode_debug_license_csv
install_requires =
    scancode-toolkit

[options.entry_points]
scancode_output =
    license_csv = scancode_debug_license_csv:LicenseCsvOutput
