opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/base"
bug-reports: "https://github.com/janestreet/base/issues"
dev-repo: "git+https://github.com/janestreet/base.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04.1" & < "4.07.0"}
  "jbuilder" {>= "1.0+beta12"}
  "sexplib" {>= "v0.10" & < "v0.11"}
]
depopts: [
  "base-native-int63"
]
synopsis: "Full standard library replacement for OCaml"
description: """
Full standard library replacement for OCaml

Base is a complete and portable alternative to the OCaml standard
library. It provides all standard functionalities one would expect
from a language standard library. It uses consistent conventions
across all of its module.

Base aims to be usable in any context. As a result system dependent
features such as I/O are not offered by Base. They are instead
provided by companion libraries such as stdio:

  https://github.com/janestreet/stdio"""
url {
  src:
    "https://ocaml.janestreet.com/ocaml-core/v0.10/files/base-v0.10.0.tar.gz"
  checksum: "md5=60a9db475c689720cc7fc4304e00b00e"
}
