pam-version: "2.0"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.github.io/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
synopsis:     "Compiler from OCaml bytecode to Javascript"
description: """
Js_of_ocaml is a compiler from OCaml bytecode to JavaScript.
It makes it possible to run pure OCaml programs in JavaScript
environment like browsers and Node.js
"""

name: "js_of_ocaml"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "1.11.1"}
  "ocaml-migrate-parsetree" {>= "1.4"}
  "ppx_tools_versioned" {>= "5.2.3"}
  "uchar"
  "js_of_ocaml-compiler" {= version}
]