opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler"
           "Vincent Hugot" ]
license: "LGPL-3.0-only with OCaml-LGPL-linking-exception"
homepage: "https://github.com/Chris00/ANSITerminal"
dev-repo: "git+https://github.com/Chris00/ANSITerminal.git"
bug-reports: "https://github.com/Chris00/ANSITerminal/issues"
doc: "https://Chris00.github.io/ANSITerminal/doc"
tags: [ "terminal"  ]
build: [
  ["jbuilder" "subst" "-p" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "jbuilder"
  "base-bytes"
  "base-unix"
]
synopsis: "Basic control of ANSI compliant terminals and the windows shell"
description: """
ANSITerminal is a module allowing to use the colors and cursor
movements on ANSI terminals. It also works on the windows shell (but
this part is currently work in progress)."""
url {
  src:
    "https://github.com/Chris00/ANSITerminal/releases/download/0.8/ANSITerminal-0.8.tbz"
  checksum: "md5=b3fc33f17823e85c86a4d9cf4498c40e"
}
