[metadata]
name = wheel
version = attr: wheel.__version__
description = A built-package format for Python
long_description = file: README.rst
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Topic :: System :: Archiving :: Packaging
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
author = Daniel Holth
author_email = dholth@fastmail.fm
maintainer = Alex Gronholm
maintainer_email = alex.gronholm@nextday.fi
url = https://github.com/pypa/wheel
project_urls = 
	Documentation = https://wheel.readthedocs.io/
	Changelog = https://wheel.readthedocs.io/en/stable/news.html
	Issue Tracker = https://github.com/pypa/wheel/issues
keywords = wheel, packaging
license = MIT

[options]
package_dir = 
	= src
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires = setuptools >= 40.9.0
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test = 
	pytest >= 3.0.0
	pytest-cov

[options.entry_points]
console_scripts = 
	wheel = wheel.cli:main
distutils.commands = 
	bdist_wheel = wheel.bdist_wheel:bdist_wheel

[tool:pytest]
addopts = --cov=wheel
testpaths = tests

[coverage:run]
source = wheel

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

